# ED_Lib

./: .gitignore  CMakeLists.txt  README.md
example/: test.cpp  test_it.cpp
include/: ED.h  EDColor.h
src/: ED.cpp
